# Lobbies

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
Pages/: index.html  page.html
res/pages/create/: create.css  create.html  create.js
res/pages/lobby/: lobby.css  lobby.html  lobby.js
res/pages/login/: login.css  login.html  login.js
res/pages/search/: search.css  search.html  search.js
res/pages/signup/: signup.css  signup.html  signup.js
res/util/: base.css  helper.js
src/: main.rs  models.rs
src/api/: actions.rs  auth.rs  form.rs  helper.rs  mod.rs
src/models/: allowed_regions.rs  app_state.rs  game.rs  lobby.rs  mod.rs  query.rs  settings.rs  status.rs  user.rs  utc.rs  util.rs
