[package]
name = "OpenLobbyServer"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web = { version = "4", features = ["openssl"] }
base64 = "0.22.1"
bcrypt = "0.15.1"
bincode = "1.3.3"
chrono = "0.4.38"
openssl = "0.10.68"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["fs"] } 
